## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = libkpf.la


libkpf_la_SOURCES = \
	lib.c

libkpf_la_LDFLAGS = 

libkpf_la_LIBADD = 

include_HEADERS = \
	libkpf.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libkpf-0.1.pc

EXTRA_DIST = \
	libkpf-0.1.pc.in
